--- a/src/Pages/Client/client.module.css
+++ b/src/Pages/Client/client.module.css
@@ -25,13 +25,27 @@
 .client .infoPair{
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 10px;
     background-color: #efefef;
-    padding: 5px 10px;
+    padding: 5px 40px 5px 10px;
     border-radius: 0px var(--main-border-radius) var(--main-border-radius) 0px;
     width: calc((100% - 20px) / 3);
+    width: calc((50% - 10px) / 2);
     border-left: 3px solid #ccc;
+    position: relative;
+}
+.client .infoPair span{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.client .infoPair:last-child{
+    width: calc(50% - 10px);
 }
 .client .infoTable{
     width: calc((100% - 20px) / 2) !important;
@@ -85,6 +99,7 @@
     }
     .client .infoPair h4{
         width: 25%;
+        text-wrap: nowrap;
     }
     .client .infoPair p{
         flex: 1;
