--- a/src/Pages/BillDetails/bill-details.module.css
+++ b/src/Pages/BillDetails/bill-details.module.css
@@ -10,7 +10,7 @@
 }
 .billDetails .additionalBills > *{
     /* width: calc((100% - 20px) / 2); */
-    min-height: 200px;
+    height: 280px;
 }
 .billDetails .additionalBills > div:first-child{
     flex: 1;
@@ -26,6 +26,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: calc((100% - 40px) / 3);
 }
 .billDetails .additionalBills > div:first-child form > div:has(textarea){
     width: 55%;
@@ -37,6 +38,7 @@
 .billDetails .additionalBills > div:first-child form > div.btns{
     width: 100%;
     flex-direction: row;
+    justify-content: center;
 }
 .billDetails .additionalBills > div:first-child form > div.btns input{
     width: fit-content;
@@ -47,7 +49,8 @@
     color: #fff;
 }
 .billDetails .additionalBills > div:last-child{
-    width: 300px;
+    flex: 1;
+    /* width: 300px; */
 }
 .billDetails .additionalBills > div:last-child .header{
     display: flex;
@@ -77,7 +80,7 @@
     /* text-align: right; */
 }
 .billDetails .additionalBills ul{
-    height: 300px;
+    height: 200px;
     overflow-y: scroll;
 }
 .billDetails .additionalBills ul::-webkit-scrollbar{
